--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Jinja2==3.1.1
 MarkupSafe==2.1.1
 numpy==1.22.3
 opencv-python==4.5.5.64
+opencv-python-headless==4.5.5.64
 Pillow==9.1.0
 reedsolo==1.5.4
 Werkzeug==2.1.1
